tests/snapshots/claptrap__tests__command__after_help.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_01b05459'
[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help

Does really amazing things for great people... but be careful with -R!
EOF_01b05459
exit 0
