tests/snapshots/claptrap__tests__command__allow_missing_positional-2.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_foo='foo'
claptrap_bar='bar'
claptrap_baz=('baz1' 'baz2' 'baz3')
