tests/snapshots/claptrap__tests__command__args.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_debug='true'
claptrap_config='true'
