tests/snapshots/claptrap__tests__command__before_help.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_b80c3b15'
Some info I'd like to appear before the help info


[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_b80c3b15
exit 0
