tests/snapshots/claptrap__tests__command__bin_name.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_23365bfb'
[1m[4mUsage:[0m [1mmy_binary[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_23365bfb
exit 0
