tests/snapshots/claptrap__tests__command__flatten_help.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_f18541e8'
[1m[4mUsage:[0m [1mmyprog[0m [arg1]
       [1mmyprog subcommand[0m [arg2]
       [1mmyprog subcommand nested[0m [OPTIONS]
       [1mmyprog subcommand help[0m [COMMAND]
       [1mmyprog subcommand2[0m [arg4]
       [1mmyprog help[0m [COMMAND]...

[1m[4mArguments:[0m
  [arg1]  

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help

[1m[4mmyprog subcommand:[0m
a sub command
  [1m-h[0m, [1m--help[0m  Print help
  [arg2]      

[1m[4mmyprog subcommand nested:[0m
A nested sub command
      [1m--arg3[0m <arg3>  
  [1m-h[0m, [1m--help[0m         Print help

[1m[4mmyprog subcommand help:[0m
Print this message or the help of the given subcommand(s)

[1m[4mmyprog subcommand2:[0m
another sub command
  [1m-h[0m, [1m--help[0m  Print help
  [arg4]      

[1m[4mmyprog help:[0m
Print this message or the help of the given subcommand(s)
  [COMMAND]...  Print help for the subcommand(s)
EOF_f18541e8
exit 0
